to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.12 (In Progress)
============================

03/26/2002: ljohnson (Lyle Johnson)
            [Ruby] Made a few minor edits to the "Advanced Topics"
            chapter of the SWIG manual and added a new major section
            about how to create multi-module Ruby packages with SWIG.

03/26/2002: ljohnson (Lyle Johnson)
            [Ruby] Removed all of the old Ruby pragmas. If any of this
            functionality is truly missed we can resurrect it, preferably
            with some kind of feature-based directive.
            
03/25/2002: ljohnson (Lyle Johnson)
            [Ruby] Fixed SWIG exception library support for Ruby, which
            has apparently been broken for some time. Luckily, no one seems
            to have noticed.

03/23/2002: beazley
            C++-namespace support in SWIG directives.

            %addmethods: 

            The %addmethods directive now accepts a fully qualified classname
            and can be used inside C++ namespace declarations.  For example:

                 // Attaches to the class Foo::Bar below
                 %addmethods Foo::Bar {
                     int somemethod() { ... }
                 };

                 namespace Foo {
                    class Bar {
                    public:
                        ...
                    };
                 
                    // Attaches to the class Bar above
                    %addmethods Bar {
                      int othermethod() { ... };
                    }
                 }

            %feature, %rename, %ignore, %exception, and related directives:
