@@ -17,6 +17,12 @@ tree (maybe).
 Version 1.3.12 (In Progress)
 ============================
 
+03/27/2002: ljohnson (Lyle Johnson)
+            [Ruby] Added support for pointer-to-member, similar to that
+            for the Python module. Remarkably similar. Also added a new
+            example for this (Examples/ruby/mpointer), which is remarkably
+            similar to the Python example of the same name.
+
 03/26/2002: ljohnson (Lyle Johnson)
             [Ruby] Made a few minor edits to the "Advanced Topics"
             chapter of the SWIG manual and added a new major section
